more tasks completed

--- a/index.html
+++ b/index.html
@@ -6,5 +6,5 @@
     <script src="assets/scripts/D10.js" defer></script>
     <title>Document</title>
   </head>
-  <body></body>
+  <body id="container"></body>
 </html>
